--- a/html/index.html
+++ b/html/index.html
@@ -364,10 +364,12 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <!--Footer-->
 <footer id="contact-tag" class="page-footer default_color scrollspy" style="padding-top: 5%; padding-bottom: 2%; line-height: 1.5">
     <div class="container" id="contact">
-        <h2 class="header text_b" style="color: white; padding-bottom: 5%;"> Contact us </h2> 
+        <h2 class="header text_b" style="color: white; padding-bottom: 5%;"> Google I/O updates </h2> 
         <div class="row">
             <div class="col l6 s12">
-                <form class="col s12" action="contact.php" method="post">
+                <iframe src="https://events.google.com/io/embed" style="width:525px;height:450px" frameborder="0" allowfullscreen></iframe>
+
+                <!--<form class="col s12" action="contact.php" method="post">
                     <div class="row">
                         <div class="input-field col s6">
                             <i class="mdi-action-account-circle prefix white-text"></i>
@@ -390,7 +392,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                             </button>
                         </div>
                     </div>
-                </form>
+                </form>-->
             </div>
             <div class="col l3 s12">
                 <h7 class="white-text">Mango Developers,<br>Univeristy of Rochester, NY</h7>
