--- a/html/index.html
+++ b/html/index.html
@@ -311,7 +311,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                     </div>
                 </div>
             </div>
-            <div class="col s12 m3">
+            <!--<div class="col s12 m3">
                 <div class="card card-avatar">
                     <div class="waves-effect waves-block waves-light">
                         <img class="activator" src="img/avatar3.png">
@@ -356,7 +356,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                         </p>
                     </div>
                 </div>
-            </div>
+            </div>-->
         </div>
     </div>
 </div>
