--- a/html/index.html
+++ b/html/index.html
@@ -94,6 +94,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                 <b>innovating</b>
                 <b>developing</b>
             </span>
+            <div class=""><a href="https://docs.google.com/forms/d/1qXm4EFJIpExn_VMPmjJyruZs2FjEOJxUx5qdIQW_-vw/" target="_blank"><img src="img/io18ex.png" style="width:80%;"></a></div>
         </h1>
     </div>
     
@@ -105,7 +106,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <div class="container" id="intro">
         <div class="row">
             <div  class="col s12">
-                <h2 class="center header text_h2" style="font-size: 2.56rem"> We are Mango Developers.<br>Why<span class="span_h2"> "Mango" </span> mean something that can't be expressed in words,<br>can only be <span class="span_h2"> Experienced.</span> </h2>
+                <h2 class="center header text_h2" style="font-size: 2.56rem"> We are Mango Developers and we are hosting the<br><a href="https://events.google.com/io/extended/">Google I/O extended Rochester</a>.<br>What's Mango?<span class="span_h2" href="https://events.google.com/io/extended/"> "Mango" </span> means something that can't be expressed in words,<br>and can only <span class="span_h2"> Experienced.</span> </h2>
             </div>
 
             <div  class="col s12 m4 l4">
@@ -367,7 +368,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         <h2 class="header text_b" style="color: white; padding-bottom: 5%;"> Google I/O updates </h2> 
         <div class="row">
             <div class="col l6 s12">
-                <iframe src="https://events.google.com/io/embed" style="width:525px;height:450px" frameborder="0" allowfullscreen></iframe>
+                <iframe src="https://events.google.com/io/embed" style="width:100%; height: 400px" frameborder="0" allowfullscreen></iframe>
 
                 <!--<form class="col s12" action="contact.php" method="post">
                     <div class="row">
