--- a/html/index.html
+++ b/html/index.html
@@ -94,7 +94,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                 <b>innovating</b>
                 <b>developing</b>
             </span>
-            <div class=""><a href="https://docs.google.com/forms/d/1qXm4EFJIpExn_VMPmjJyruZs2FjEOJxUx5qdIQW_-vw/" target="_blank"><img src="img/io18ex.png" style="width:80%;"></a></div>
+            <div class=""><a href="https://docs.google.com/forms/d/1qXm4EFJIpExn_VMPmjJyruZs2FjEOJxUx5qdIQW_-vw/" target="_blank"><img src="img/io18ex.png" style="width:60%;"></a></div>
         </h1>
     </div>
     
@@ -106,7 +106,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <div class="container" id="intro">
         <div class="row">
             <div  class="col s12">
-                <h2 class="center header text_h2" style="font-size: 2.56rem"> We are Mango Developers and we are hosting the<br><a href="https://events.google.com/io/extended/">Google I/O extended Rochester</a>.<br>What's Mango?<span class="span_h2" href="https://events.google.com/io/extended/"> "Mango" </span> means something that can't be expressed in words,<br>and can only <span class="span_h2"> Experienced.</span> </h2>
+                <h2 class="center header text_h2" style="font-size: 2.56rem"> We are Mango Developers and we are hosting the<br><a href="https://events.google.com/io/extended/" target="_blank" >Google I/O extended Rochester</a>.<br>What's Mango?<span class="span_h2" href="https://events.google.com/io/extended/"> "Mango" </span> means something that can't be expressed in words,<br>and can only <span class="span_h2"> Experienced.</span> </h2>
             </div>
 
             <div  class="col s12 m4 l4">
@@ -367,10 +367,12 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <div class="container" id="contact">
         <h2 class="header text_b" style="color: white; padding-bottom: 5%;"> Google I/O updates </h2> 
         <div class="row">
-            <div class="col l6 s12">
-                <iframe src="https://events.google.com/io/embed" style="width:100%; height: 400px" frameborder="0" allowfullscreen></iframe>
+        	<iframe src="https://events.google.com/io/embed" style="width:100%; height: 500px" frameborder="0" allowfullscreen></iframe>
+        	<div style="padding-top: 5%">
+        	<h2 class="header text_b" style="color: white; padding-bottom: 5%;"> Contact Us </h2> 
 
-                <!--<form class="col s12" action="contact.php" method="post">
+            <div class="col l6 s12" style="z-index: -100px">
+                <form class="col s12" action="contact.php" method="post">
                     <div class="row">
                         <div class="input-field col s6">
                             <i class="mdi-action-account-circle prefix white-text"></i>
@@ -393,13 +395,14 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                             </button>
                         </div>
                     </div>
-                </form>-->
+                </form>
             </div>
-            <div class="col l3 s12">
+            <div class="col l3 s12" >
                 <h7 class="white-text">Mango Developers,<br>Univeristy of Rochester, NY</h7>
                 <ul>
                     <li><a class="white-text" href="https://docs.google.com/forms/d/1qXm4EFJIpExn_VMPmjJyruZs2FjEOJxUx5qdIQW_-vw">RSVP: Google I/O extended Rochester 2018</a></li><br>
-                    <li><a class="white-text" href="https://docs.google.com/document/d/1HuuWpOorBGREA1hY20TZagI3T15x863aHETk_dO1OzE">Be a part of our team.</a></li>
+                    <li><a class="white-text" href="https://docs.google.com/document/d/1HuuWpOorBGREA1hY20TZagI3T15x863aHETk_dO1OzE">Be a part of our team.</a></li><br>
+                    <li><a class="white-text" href="mailto:admin@mangodevelopers.com">Email us!</a></li>
                 </ul>
             </div>
             <div class="col l3 s12">
@@ -432,6 +435,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                     </li>
                 </ul>
             </div>
+        	</div>
         </div>
     </div>
     <div class="footer-copyright default_color">
