html/index.html update with mangodevelopers quoate

--- a/html/index.html
+++ b/html/index.html
@@ -90,9 +90,9 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                 <b class="is-visible">_</b>
                 <b>Googliness</b>
                 <b>Google Developers</b>
-                <b>creating</b>
-                <b>innovating</b>
-                <b>developing</b>
+                <b>Google Science Fair</b>
+                <b>Android</b>
+                <b>Rochester Community</b>
             </span>
             <div class=""><a href="https://docs.google.com/forms/d/1qXm4EFJIpExn_VMPmjJyruZs2FjEOJxUx5qdIQW_-vw/" target="_blank"><img src="img/io18ex.png" style="width:60%;"></a></div>
         </h1>
@@ -106,7 +106,8 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <div class="container" id="intro">
         <div class="row">
             <div  class="col s12">
-                <h2 class="center header text_h2" style="font-size: 2.56rem"> We are Mango Developers and we are hosting the<br><a href="https://events.google.com/io/extended/" target="_blank" >Google I/O extended Rochester</a>.<br>What's Mango?<span class="span_h2" href="https://events.google.com/io/extended/"> "Mango" </span> means something that can't be expressed in words,<br>and can only <span class="span_h2"> Experienced.</span> </h2>
+                <h2 class="center header text_h2" style="font-size: 2.56rem"> We are Mango Developers and we are hosting the<br><a href="https://events.google.com/io/extended/" target="_blank" >Google I/O extended Rochester</a>.<br>What's Mango?<span class="span_h2" href="https://events.google.com/io/extended/"> <a href="https://events.google.com/io/extended/" target="_blank" >"Mango"</a> </span> means something that can't be expressed in words,<br>and can only <span class="span_h2"> Experienced.</span> 
+                “Technology is awesome, trendy and empowering for all communities.”  - Mango Developers</h2>
             </div>
 
             <div  class="col s12 m4 l4">
